<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="readingDesc"
            type="com.techtap.ReadingDesc" />

        <variable
            name="position"
            type="Integer" />

        <variable
            name="reportListener"
            type="com.techtap.ReportListAdapter.ReportListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_measurement"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:text="@string/measurement_confidence_level"
            android:textSize="@dimen/sp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_low_confidence"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_measurement"
            app:layout_constraintStart_toEndOf="@+id/lbl_measurement"
            app:layout_constraintTop_toTopOf="@+id/lbl_measurement"
            app:srcCompat="@drawable/ic_conf_level_low_small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_low"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/low"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_measurement"
            app:layout_constraintStart_toEndOf="@+id/iv_low_confidence"
            app:layout_constraintTop_toTopOf="@+id/lbl_measurement" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_medium_confidence"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_measurement"
            app:layout_constraintStart_toEndOf="@+id/tv_low"
            app:layout_constraintTop_toTopOf="@+id/lbl_measurement"
            app:srcCompat="@drawable/ic_conf_level_medium_small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_medium"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/medium"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_measurement"
            app:layout_constraintStart_toEndOf="@+id/iv_medium_confidence"
            app:layout_constraintTop_toTopOf="@+id/lbl_measurement" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_high_confidence"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_measurement"
            app:layout_constraintStart_toEndOf="@+id/tv_medium"
            app:layout_constraintTop_toTopOf="@+id/lbl_measurement"
            app:srcCompat="@drawable/ic_conf_level_high_small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_high"
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/high"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_measurement"
            app:layout_constraintStart_toEndOf="@+id/iv_high_confidence"
            app:layout_constraintTop_toTopOf="@+id/lbl_measurement" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_to_help_with_diagnosis"
            style="@style/TextViewStyleRegular"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/to_help_with_diagnosis"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_measurement" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_these_results_should_be"
            style="@style/TextViewStyleRegular"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/these_results_should_be_used_as_a_guide_only"
            android:textSize="@dimen/sp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_to_help_with_diagnosis" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_this_is_limited_scan"
            style="@style/TextViewStyleRegular"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/this_is_a_limited_scan_result"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_these_results_should_be" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>